add navigation bar

--- a/my-app/src/app/header/navigation/navigation.component.html
+++ b/my-app/src/app/header/navigation/navigation.component.html
@@ -1,1 +1,12 @@
-<p>navigation works!</p>
+<nav>
+    <div class="nav-left">
+        <img style="align-self:flex-end; " class="nav-logo" src="../../../assets/images/logo/logo.png" alt="it's logo">
+    </div>
+    <div class="nav-right">
+       <ul class="nav-menu">
+        <li class="nav-item"><a href="#">اخبار</a></li>
+        <li class="nav-item"><a href="#">نقشه</a></li>
+        <li class="nav-item"><a href="#">خدمات</a></li>
+       </ul>
+    </div>
+</nav>
