create html and style of slider,lets go to write typescript

--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -8,6 +8,7 @@
     --nav-color: rgba(42, 64, 232, 0.399);
     --a-color:#ffffff7c;
     --a-white-hover:#fff;
+    --white-color:#fff;
     /* main colors */
   }
   /* font */
