--- a/my-app/src/app/section1/section1.component.html
+++ b/my-app/src/app/section1/section1.component.html
@@ -1,10 +1,10 @@
 <section>
     <div class="container">
         <div class="plan">
-            <div class="step"> <span>1</span><span><img src="../../assets/images/logo/map.png" alt=""></span></div>
-            <div class="step"> <span>2</span><span><img src="../../assets/images/logo/card.png" alt=""></span></div>
-            <div class="step"> <span>3</span><span><img src="../../assets/images/logo/bycicle.png" alt=""></span></div>
-            <div class="step"> <span>4</span><span><img src="../../assets/images/logo/enjoy.png" alt=""></span></div>
+            <div class="step"> <span class="logo-num">1</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/map.png" alt=""></span></div>
+            <div class="step"> <span class="logo-num">2</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/card.png" alt=""></span></div>
+            <div class="step"> <span class="logo-num">3</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/bycicle.png" alt=""></span></div>
+            <div class="step"> <span class="logo-num">4</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/enjoy.png" alt=""></span></div>
         </div>
     </div>
 </section>
