--- a/my-app/src/app/section2/section2.component.html
+++ b/my-app/src/app/section2/section2.component.html
@@ -1,1 +1,13 @@
-<p>section2 works!</p>
+<section>
+  <div class="container container-sec2">
+  
+    <div class="card-left"><img class="img-card" src="../../assets/images/card-images/support-bycicle.png" alt=""></div>
+    <div class="card-right">
+        <p>
+          با اهدا کردن دوچرخه از ما شارژ اصفهان کارت و دریافت نهال برای درخت کاری
+          دریافت کنید و به ترویج دوچرخه سواری کمک کنید
+        </p>
+        <a class="btn" href="#"> همبستگی</a>
+      </div>
+  </div>
+</section>
