create strcutore of footer i'll build it

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -5,3 +5,5 @@
 <app-section1></app-section1>
 <app-section2></app-section2>
 <app-section3></app-section3>
+<!-- <app-map></app-map> -->
+<app-footer></app-footer>
