--- a/my-app/src/app/footer/footer.component.html
+++ b/my-app/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer>
+  <div class="container-footer">
+    <div class="logos"></div>
+    <div class="description">
+      <p>ارتباط باما</p>
+      <p>آدرس</p>
+    </div>
+  </div>
+  <p class="producer">طراحی شده توسط:{{producer}}</p>
+</footer>
