--- a/my-app/src/app/section2/section2.component.css
+++ b/my-app/src/app/section2/section2.component.css
@@ -1,3 +1,4 @@
+/* responsive codes in the end of this file */
 .container-sec2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -38,4 +39,9 @@
 }
 .btn:hover {
   opacity: 90%;
+}
+/* responsive codes */
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+ 
 }
