change container's name

--- a/my-app/src/app/section1/section1.component.html
+++ b/my-app/src/app/section1/section1.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container">
+    <div class="container-non-b">
         <div class="plan">
             <div class="step"> <span class="logo-num">1</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/map.png" alt=""></span></div>
             <div class="step"> <span class="logo-num">2</span><span class="logo"><img class="logo-img" src="../../assets/images/logo/card.png" alt=""></span></div>
