--- a/my-app/src/app/section2/section2.component.html
+++ b/my-app/src/app/section2/section2.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="container container-sec2">
+  <div class="container-non-b container-sec2">
   
     <div class="card-left"><img class="img-card" src="../../assets/images/card-images/support-bycicle.png" alt=""></div>
     <div class="card-right">
