--- a/my-app/src/app/section3/section3.component.html
+++ b/my-app/src/app/section3/section3.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="container container-sec">
+  <div class="container-non-b container-sec">
     <h2>فیلد های در آمدزایی</h2>
     <div class="cards">
       <div class="card">
