--- a/my-app/src/app/header/navigation/navigation.component.html
+++ b/my-app/src/app/header/navigation/navigation.component.html
@@ -4,9 +4,9 @@
         </div>
         <div class="nav-right">
            <ul class="nav-menu">
-            <li class="nav-item"><a href="#">اخبار</a></li>
-            <li class="nav-item"><a href="#">نقشه</a></li>
-            <li class="nav-item"><a href="#">خدمات</a></li>
+            <li class="nav-item-non-b"><a href="#">اخبار</a></li>
+            <li class="nav-item-non-b"><a href="#">نقشه</a></li>
+            <li class="nav-item-non-b"><a href="#">خدمات</a></li>
            </ul>
         </div>
     </nav>
