--- a/my-app/src/app/section2/section2.component.css
+++ b/my-app/src/app/section2/section2.component.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   grid-template-rows: repeat(2, 1fr);
   justify-content: space-around;
-}
+  text-justify: distribute }
 .card-right p {
   text-align: center;
   display: inline-block;
@@ -38,4 +38,17 @@
 }
 .btn:hover {
   opacity: 90%;
+}
+@media only screen and (max-width: 700px) {
+  .container-sec2 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 2rem;
+  }
+  .img-card {
+display: none;
+  }
+  .btn{
+    width: 200px;
+  }
 }
