--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,9 +1,17 @@
 <app-header></app-header>
-<section id="slider">
-  <app-slides></app-slides>
-</section>
-<app-section1></app-section1>
-<app-section2></app-section2>
-<app-section3></app-section3>
-<!-- <app-map></app-map> -->
-<app-footer></app-footer>
+<div
+  data-aos="fade-down"
+  data-aos-duration="500"
+  data-aos-easing="ease-in"
+  data-aos-delay="1000"
+>
+  <section id="slider">
+    <app-slides></app-slides>
+  </section>
+
+  <app-section1></app-section1>
+  <app-section2></app-section2>
+  <app-section3></app-section3>
+  <!-- <app-map></app-map> -->
+  <app-footer></app-footer>
+</div>
