--- a/my-app/src/app/section3/section3.component.css
+++ b/my-app/src/app/section3/section3.component.css
@@ -13,14 +13,34 @@ h2{
     padding: 15%;
     text-align: right;
     background-color: var(--second-color);
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
     box-shadow: 3px 5px 10px var(--forth-color);
+    padding: 2rem;
 }
 .card-h{
+    text-align: right;
     font-size: 170%;
+    padding-bottom: 0.9rem;
 }
 .card-p{
+    text-align: right;
     font-size: 90%;
 }
+
+@media only screen and (max-width: 730px) {
+    .cards{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .card:last-child{
+        grid-column: 1/3;
+    }
+  }
+  @media only screen and (max-width: 570px) {
+    .cards{
+        grid-template-columns: repeat(1,1fr);
+        
+    }
+    .card:last-child{
+        grid-column: auto;
+    }
+  }
