--- a/my-app/src/app/section3/section3.component.html
+++ b/my-app/src/app/section3/section3.component.html
@@ -3,17 +3,20 @@
     <h2>فیلد های در آمدزایی</h2>
     <div class="cards">
       <div class="card">
-        <h4 class="card-h">سرویس دوچرخه</h4>
+        <div><h4 class="card-h">سرویس دوچرخه</h4></div>
+        <hr />
         <div>
           <p class="card-p">انجام سرویس های دوچرخه در محل دریافت دوچرخه</p>
         </div>
       </div>
       <div class="card">
-        <h4 class="card-h">اجاره دادن دوچرخه</h4>
+        <div><h4 class="card-h">اجاره دادن دوچرخه</h4></div>
+        <hr />
         <div><p class="card-p">اجاره ساعتی یا روزانه دوچرخه خود</p></div>
       </div>
       <div class="card">
-        <h4 class="card-h">اجاره دادن مکان نگه داری</h4>
+        <div><h4 class="card-h">اجاره دادن مکان نگه داری</h4></div>
+        <hr />
         <div><p class="card-p">اجاره مکان های قابل جمع آوری دوچرخه ها</p></div>
       </div>
     </div>
