--- a/my-app/src/app/_components/modal.component.css
+++ b/my-app/src/app/_components/modal.component.css
@@ -12,16 +12,37 @@ jw-modal {
 
   /* semi-transparent black background exposed by padding */
   background-color: rgba(0, 0, 0, 0.75);
-  padding: 40px;
-
+padding-top: 150px;
   /* enables scrolling for tall modals */
   overflow: auto;
 }
 
 .jw-modal-body {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+justify-content: space-around;
+  max-width:760px ;
   background: #fff;
+  height: 60%;
+  width: 100%;
+  margin: auto;
 }
+.form{
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+}
+.form input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
 
 body.jw-modal-open {
   /* body overflow is hidden to hide main scrollbar when modal window is open */
