--- a/my-app/src/app/footer/footer.component.html
+++ b/my-app/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer>
+  <div class="footer">
   <div class="container-footer">
     <div class="logos"></div>
     <div class="description">
@@ -7,4 +8,5 @@
     </div>
   </div>
   <p class="producer">طراحی شده توسط:{{producer}}</p>
+</div>
 </footer>
