--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -10,6 +10,8 @@
   --a-color: #ffffff7c;
   --a-white-hover: #fff;
   --white-color: #fff;
+  --danger-btn:rgb(206, 34, 34);
+  --btn-success:rgb(0, 255, 34);
   /* main colors */
 }
 /* font */
