--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,12 +1,2 @@
-<app-header></app-header>
-
-  <section data-aos="fade-up" id="slider">
-    <app-slides></app-slides>
-  </section>
-
-  <app-section1 data-aos="fade-up" data-aos-delay="1000"></app-section1>
-  <app-section2 data-aos="zoom-in" data-aos-delay="1000"></app-section2>
-  <app-section3 data-aos="zoom-in" data-aos-delay="300"></app-section3>
-  <!-- <app-map></app-map> -->
-  <app-footer></app-footer>
+<router-outlet></router-outlet>
 
