--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 
 <div id='card' class="animated fadeIn">
     <div id='upper-side'>
@@ -26,3 +26,4 @@
       <a href="#" id="contBtn">صفحه اصلی</a>
     </div>
   </div>
+  <app-footer></app-footer>
