--- a/my-app/src/app/slides/slides.component.html
+++ b/my-app/src/app/slides/slides.component.html
@@ -1,7 +1,7 @@
 <div
   #container
   [ngStyle]="{ width: 100 + '%', height: 450 + 'px' }"
-  style="text-align: center; margin: auto; padding: 0"
+  style="text-align: center; margin: auto; padding: 0 ;max-width: 1200px;"
 >
   <ng-image-slider
     #nav
