--- a/my-app/src/app/_components/modal.component.html
+++ b/my-app/src/app/_components/modal.component.html
@@ -10,7 +10,9 @@
         <label for="lastName">نام خانوادگی</label>
         <input type="text" name="lastName" id="lastName" />
         <label for="phoneNumber">شماره تلفن</label>
-        <input type="text" name="phoneNumber" id="phoneNumber" />
+        <input type="number" name="phoneNumber" id="phoneNumber" />
+        <label for="email">ایمیل</label>
+        <input type="email" name="" id="">
         <!-- buttons' styles in section2.css -->
       </form>
     </div>
