--- a/my-app/src/app/header/navigation/navigation.component.html
+++ b/my-app/src/app/header/navigation/navigation.component.html
@@ -6,7 +6,8 @@
            <ul class="nav-menu">
             <li class="nav-item-non-b"><a href="#">اخبار</a></li>
             <li class="nav-item-non-b"><a href="#">نقشه</a></li>
-            <li class="nav-item-non-b"><a href="#">خدمات</a></li>
+            <li class="nav-item-non-b"><a routerLink="services">خدمات</a></li>
+            <li class="nav-item-non-b"><a href="#help">اهدای دوچرخه</a></li>
            </ul>
         </div>
     </nav>
