--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="example-card">
+  <mat-card class="example-card" *ngIf="settimeout">
     <mat-card-header>
       <mat-card-title>{{ progress }}</mat-card-title>
     </mat-card-header>
