rewrite methods of success help but we need a little changes

--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -10,7 +10,7 @@
       <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-actions>
-      <button class="btn" (click)="cansel()"  routerLink="/home" mat-button>لغو</button>
+      <button class="btn" (click)="cansel()"  routerLink="/home" mat-button>{{btnsubject}}</button>
     </mat-card-actions>
     <mat-card-footer>
       <mat-progress-bar mode="indeterminate"></mat-progress-bar>
