--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -10,10 +10,12 @@
       <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-actions>
-      <button class="btn" (click)="cansel()"  routerLink="/home" mat-button>{{btnsubject}}</button>
+      <button class="btn" (click)="cansel()" routerLink="/home" mat-button>
+        {{ btnsubject }}
+      </button>
     </mat-card-actions>
     <mat-card-footer>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar #ProgressB mode="query"  ></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 </div>
