progress bar is completed

--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -15,7 +15,7 @@
       </button>
     </mat-card-actions>
     <mat-card-footer>
-      <mat-progress-bar #ProgressB mode="query"  ></mat-progress-bar>
+      <mat-progress-bar  [mode]="mymode"  ></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 </div>
