create ourservice component

--- a/my-app/src/app/success-help/success-help.component.html
+++ b/my-app/src/app/success-help/success-help.component.html
@@ -10,7 +10,7 @@
       <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-actions>
-      <button class="btn" (click)="cansel()" routerLink="/home" mat-button>
+      <button class="btn" (click)="cansel()" routerLink="/home" >
         {{ btnsubject }}
       </button>
     </mat-card-actions>
