add detail's button on section3 cards

--- a/my-app/src/app/section2/section2.component.html
+++ b/my-app/src/app/section2/section2.component.html
@@ -9,8 +9,7 @@
     </div>
     <div class="card-right">
       <p>
-        با اهدا کردن دوچرخه از ما شارژ اصفهان کارت و دریافت نهال برای درخت کاری
-        دریافت کنید و به ترویج دوچرخه سواری کمک کنید
+       با اهدا کردن دوچرخه از ما شارژ اصفهان کارت دریافت کنید و به ترویج دوچرخه سواری کمک کنید
       </p>
       <button (click)="modalService.open('modal-1')" class="btn">
         همبستگی
