--- a/my-app/src/app/section3/section3.component.css
+++ b/my-app/src/app/section3/section3.component.css
@@ -16,6 +16,8 @@ h2{
     justify-content: space-between;
     box-shadow: 3px 5px 10px var(--forth-color);
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
 }
 .card-h{
     text-align: right;
