--- a/my-app/src/app/section3/section3.component.html
+++ b/my-app/src/app/section3/section3.component.html
@@ -5,19 +5,32 @@
       <div class="card">
         <div><h4 class="card-h">سرویس دوچرخه</h4></div>
         <hr />
+        <div class="card-p">
+          <p>انجام سرویس های دوچرخه در محل دریافت دوچرخه</p>
+        </div>
         <div>
-          <p class="card-p">انجام سرویس های دوچرخه در محل دریافت دوچرخه</p>
+          <button class="btn" routerLink="/services">اطلاعات بیشتر</button>
         </div>
       </div>
       <div class="card">
         <div><h4 class="card-h">اجاره دادن دوچرخه</h4></div>
         <hr />
-        <div><p class="card-p">اجاره ساعتی یا روزانه دوچرخه خود</p></div>
+        <div class="card-p">
+          <p>اجاره ساعتی یا روزانه دوچرخه خود</p>
+        </div>
+        <div>
+          <button class="btn" routerLink="/services">اطلاعات بیشتر</button>
+        </div>
       </div>
       <div class="card">
         <div><h4 class="card-h">اجاره دادن مکان نگه داری</h4></div>
         <hr />
-        <div><p class="card-p">اجاره مکان های قابل جمع آوری دوچرخه ها</p></div>
+        <div class="card-p">
+          <p>اجاره مکان های قابل جمع آوری دوچرخه ها</p>
+        </div>
+        <div>
+          <button class="btn" routerLink="/services">اطلاعات بیشتر</button>
+        </div>
       </div>
     </div>
   </div>
