add loading bar and error message for routing

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<ngx-loading-bar></ngx-loading-bar>
-<router-outlet></router-outlet>
 
+<router-outlet>
+</router-outlet>
 <app-footer></app-footer>
