--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -12,6 +12,7 @@
   --white-color: #fff;
   --danger-btn:rgb(206, 34, 34);
   --btn-success:rgb(0, 255, 34);
+  --error-message:rgb(154, 0, 0);
   /* main colors */
 }
 /* font */
