create ui of form of bicyle-service

--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
@@ -1,1 +1,14 @@
-<p>bicycle-service works!</p>
+<div class="container-non-b">
+  <form  action="">
+    <label for="">نام</label>
+    <input type="text" />
+    <label for="">نام خانوادگی</label>
+    <input type="text" />
+    <label for="">شماره تلفن</label>
+    <input type="number" name="" id="" />
+    <label for="">کد ملی</label>
+    <input type="number" name="" id="" />
+     <label for="">عکس کارت ملی</label>
+    <input type="file" name="" id="" />
+  </form>
+</div>
