--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
@@ -10,5 +10,6 @@
     <input type="number" name="" id="" />
      <label for="">عکس کارت ملی</label>
     <input type="file" name="" id="" />
+    <button class="btn" type="submit">ثبت اطلاعات</button>
   </form>
 </div>
