--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
@@ -1,13 +1,13 @@
 <div class="container-non-b">
   <form action="">
     <label for="">نام</label>
-    <input type="text" />
-    <label for="">نام خانوادگی</label>
-    <input type="text" />
+    <input [formControl]="name" type="text" />
+    <label  for="">نام خانوادگی</label>
+    <input [formControl]="lastName" type="text" />
     <label for="">شماره تلفن</label>
-    <input type="number" name="" id="" />
+    <input [formControl]="phoneNumber" type="number" name="" id="" />
     <label for="">کد ملی</label>
-    <input  type="number" name="" id=""  />
+    <input [formControl]="identifyCode"  type="number" name="" id="" />
     <label for="">عکس کارت ملی</label>
     <input type="file" name="" id="" />
     <button class="btn" type="submit">ثبت اطلاعات</button>
