--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -30,7 +30,6 @@
 body {
   font-family: "iran-sans";
   background-color: var(--main-color);
-  color: var(--white-color);
 }
 a {
   text-decoration: none;
@@ -47,7 +46,7 @@ li {
   margin: auto;
   padding: 0;
 }
-p,h1,h2,h3,h5,h4{
+p,h1,h2,h3,h5,h4,label{
   direction: rtl;
   color: var(--white-color);
 }
