--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.css
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.css
@@ -19,3 +19,8 @@ form input {
   border: 4px solid var(--input-focus);
   background-color: rgb(240, 240, 240);
 }
+.btn{
+  width: 150px;
+  align-self:flex-end;
+  font-size: 1.1rem;
+}
