change on styles

--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
@@ -1,15 +1,22 @@
 <div class="container-non-b">
   <form action="">
     <label for="">نام</label>
-    <input  type="text" />
-    <label  for="">نام خانوادگی</label>
-    <input  type="text" />
+    <input type="text" />
+    <label for="">نام خانوادگی</label>
+    <input type="text" />
     <label for="">شماره تلفن</label>
-    <input  type="number" name="" id="" />
+    <input type="number" name="" id="" />
     <label for="">کد ملی</label>
-    <input  maxlength="10" type="number" name="" id="" />
+    <input maxlength="10" type="number" name="" id="" />
     <label for="">عکس کارت ملی</label>
     <input type="file" name="" id="" />
-    <button class="btn" type="submit">ثبت اطلاعات</button>
+    <button
+      routerLink="/submit-help"
+      routerLinkActive="active"
+      class="btn"
+      type="submit"
+    >
+      ثبت اطلاعات
+    </button>
   </form>
 </div>
