--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.css
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.css
@@ -19,6 +19,9 @@ form input {
   border: 4px solid var(--input-focus);
   background-color: rgb(240, 240, 240);
 }
+label{
+  color: var(--white-color);
+}
 .btn{
   width: 150px;
   align-self:flex-end;
