--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -46,7 +46,7 @@ li {
   margin: auto;
   padding: 0;
 }
-p,h1,h2,h3,h5,h4,label{
+p,h1,h2,h3,h5,h4{
   direction: rtl;
   color: var(--white-color);
 }
