--- a/my-app/src/app/slides/slides.component.html
+++ b/my-app/src/app/slides/slides.component.html
@@ -9,6 +9,7 @@
     [infinite]="false"
     [autoSlide]="1"
     [animationSpeed]="0.1"
+    [direction]="'rtl'"
     [imageSize]="{
       width: container.style.width,
       space: 0,
