--- a/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
+++ b/my-app/src/app/our-service/bicycle-service/bicycle-service.component.html
@@ -1,13 +1,14 @@
 <div class="container-non-b">
-  <form action="">
+  <form  action="">
     <label for="">نام</label>
-    <input type="text" />
+    <input  type="text" />
     <label for="">نام خانوادگی</label>
     <input type="text" />
     <label for="">شماره تلفن</label>
     <input type="number" name="" id="" />
     <label for="">کد ملی</label>
-    <input maxlength="10" type="number" name="" id="" />
+    <input (input)="isValid($event)" type="number" name="" id="" />
+    <p [style]="ErrorControler">{{ErrorMessage}}</p>
     <label for="">عکس کارت ملی</label>
     <input type="file" name="" id="" />
     <button
