--- a/my-app/src/app/footer/footer.component.html
+++ b/my-app/src/app/footer/footer.component.html
@@ -1,12 +1,34 @@
 <footer>
   <div class="footer">
-  <div class="container-footer">
-    <div class="logos"></div>
-    <div class="description">
-      <p>ارتباط باما</p>
-      <p>آدرس</p>
+    <div class="container-footer">
+      <div class="col-left">
+        <div>آدرس:اصفهان،خیابان پروین،دانشکده سما خوراسگان</div>
+        <div class="producer">{{ producer }}:طراحی شده توسط</div>
+      </div>
+
+      <div class="col-right">
+        <div>
+          <h3>ارتباط با ما</h3>
+          <div class="socialmedia">
+            اینستاگرام
+            <a href="https://instagram.com/siavashasachi">
+              <i class="fa fa-instagram"> </i>: @siavashasachi
+            </a>
+          </div>
+          <div class="socialmedia">
+            تلگرام
+            <a href="https://telegram.com/siavashasachi">
+              <i class="fa fa-telegram"> </i>: @siavashasachi
+            </a>
+          </div>
+          <div class="socialmedia">
+            لینکدین
+            <a href="https://www.linkedin.com/in/siavash-asachi-312847211">
+              <i class="fa fa-linkedin"> </i>: @siavashasachi
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <p class="producer">طراحی شده توسط:{{producer}}</p>
-</div>
 </footer>
